<resources>
    <string name="app_name">Composition</string>
    <string name="welcome">Добро пожаловать!\nДавайте проверим, как вы умеете складывать и вычитать!</string>
    <string name="start_image">Start image</string>
    <string name="app_description">    Для начала необходимо выбрать уровень сложности. Правила игры следующие: в центральном круге вы увидите число, слева и снизу от него в квадрате еще одно. Ваша задача - выяснить, какое число  должно стоять в квадрате справа, чтобы сумма значений в квадратах равнялась числу в центральном круге.\nПример:\n    В центральном круге число 9, слева в квадрате - 3, значит в правом квадрате должно быть число 6.\n     Время теста ограничено.\n     Удачи!</string>
    <string name="continue_from_welcome_fragment">Продолжить</string>
    <string name="choose_level">Выберите уровень сложности</string>
    <string name="test_button">TEST</string>
    <string name="normal_button">Нормальный</string>
    <string name="easy_button">Легкий</string>
    <string name="hard_button">Тяжелый</string>
    <string name="game_over">Game Over</string>
    <string name="score_answers">Ваш счет: %s</string>
    <string name="question_mark">\?</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
</resources>