<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/textViewChooseLevel"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="18sp"
        app:layout_constraintVertical_weight="1"
        android:textColor="@color/black"
        android:text="@string/choose_level"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/buttonTestLevel"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_height="100dp"
        android:text="@string/test_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChooseLevel" />

    <Button
        android:id="@+id/buttonNormalLevel"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/normal_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEasyLevel" />

    <Button
        android:id="@+id/buttonEasyLevel"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/easy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTestLevel" />

    <Button
        android:id="@+id/buttonHardLevel"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/hard_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNormalLevel" />

</androidx.constraintlayout.widget.ConstraintLayout>